# Aris_Team5

src/interface_package/: CMakeLists.txt
src/interface_package/srv/: IceRobot.srv  OrderRecord.srv  RestQuantity.srv
src/robot_package/: package.xml  setup.py
src/robot_package/robot_package/: KioskToRobot.py  RobotToKiosk.py  scripts.py
src/robot_service/: CMakeLists.txt  package.xml
src/robot_service/srv/: IceRobot.srv
src/store_package/store_package/: store.py
test/: test.py
